--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -57,15 +57,16 @@ jobs:
     #     gpg -d --passphrase "${PASSWORD}" --batch local.properties.asc > local.properties
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Check with Lint
-      run: ./gradlew lintGithubRelease
+    # - name: Check with Lint
+    #   run: ./gradlew lintGithubRelease
     - name: Build with Gradle
-      run: ./gradlew assembleGithubRelease assembleLargeRelease assemblePlayRelease uploadBugsnagGithub-releaseMapping uploadBugsnagLarge-releaseMapping uploadBugsnagPlay-releaseMapping
+      # run: ./gradlew assembleGithubRelease assembleLargeRelease assemblePlayRelease uploadBugsnagGithub-releaseMapping uploadBugsnagLarge-releaseMapping uploadBugsnagPlay-releaseMapping
+      run: ./gradlew assembleGithubRelease
     #https://docs.github.com/en/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds
-    - name: Generate artifact attestation
-      uses: actions/attest-build-provenance@v1
-      with:
-        subject-path: 'app/build/outputs/apk/**/release/*.apk'
+    # - name: Generate artifact attestation
+    #   uses: actions/attest-build-provenance@v1
+    #   with:
+    #     subject-path: 'app/build/outputs/apk/**/release/*.apk'
     # - name: Upload to BitBucket
     #   run: |
     #     ./gradlew upload -Ptarget=play-preview-${{ github.event.inputs.branch }}
