--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,13 +55,18 @@ jobs:
     #     gpg -d --passphrase "${PASSWORD}" --batch keystore.properties.asc > keystore.properties
     #     echo "${{ secrets.LOCAL_PROPERTIES }}" > local.properties.asc
     #     gpg -d --passphrase "${PASSWORD}" --batch local.properties.asc > local.properties
+    - name: Replace code
+      # Replace static boolean isPro(Context context) {.+?} -> static boolean isPro(Context context) { return true; }
+      # for all files named ActivityBilling.java
+      run: |
+        find . -name ActivityBilling.java -exec sed -i 's/static boolean isPro(Context context) {/static boolean isPro(Context context) { return true; /g' {} \;
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     # - name: Check with Lint
     #   run: ./gradlew lintGithubRelease
     - name: Build with Gradle
       # run: ./gradlew assembleGithubRelease assembleLargeRelease assemblePlayRelease uploadBugsnagGithub-releaseMapping uploadBugsnagLarge-releaseMapping uploadBugsnagPlay-releaseMapping
-      run: ./gradlew assembleGithubRelease
+      run: ./gradlew assembleLargeRelease
     #https://docs.github.com/en/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds
     # - name: Generate artifact attestation
     #   uses: actions/attest-build-provenance@v1
