--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -66,7 +66,7 @@ jobs:
     #   run: ./gradlew lintGithubRelease
     - name: Build with Gradle
       # run: ./gradlew assembleGithubRelease assembleLargeRelease assemblePlayRelease uploadBugsnagGithub-releaseMapping uploadBugsnagLarge-releaseMapping uploadBugsnagPlay-releaseMapping
-      run: ./gradlew assembleLargeRelease
+      run: ./gradlew assembleLargeRelease --info
     #https://docs.github.com/en/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds
     # - name: Generate artifact attestation
     #   uses: actions/attest-build-provenance@v1
