fix: fix properties

--- a/keystore.properties
+++ b/keystore.properties
@@ -1,3 +1,4 @@
-RELEASE_STORE_PASSWORD=aaaaaa
-RELEASE_KEY_ALIAS=key0
-RELEASE_KEY_PASSWORD=aaaaaa
+storeFile=keystore.jks
+storePassword=aaaaaa
+keyAlias=key0
+keyPassword=aaaaaa
