--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -66,7 +66,7 @@ jobs:
     #   run: ./gradlew lintGithubRelease
     - name: Build with Gradle
       # run: ./gradlew assembleGithubRelease assembleLargeRelease assemblePlayRelease uploadBugsnagGithub-releaseMapping uploadBugsnagLarge-releaseMapping uploadBugsnagPlay-releaseMapping
-      run: ./gradlew assembleLargeRelease --info
+      run: ./gradlew assembleGithubRelease assembleLargeRelease --info
     #https://docs.github.com/en/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds
     # - name: Generate artifact attestation
     #   uses: actions/attest-build-provenance@v1
@@ -90,3 +90,7 @@ jobs:
       with:
         name: APK files
         path: app/build/outputs/apk/**/release/*.apk
+    - name: Create release
+      run: |
+        gh release create ${{github.run_number}} --title "Release ${{github.run_number}}"
+        find . -name "*.apk" -exec gh release upload ${{github.run_number}} {} --clobber \;
