--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
     // https://apilevels.com/
     defaultConfig {
-        applicationId "eu.faircode.email"
+        applicationId "com.34j.fairemail"
         compileSdk 34
         minSdkVersion 21
         targetSdkVersion 34
@@ -470,8 +470,8 @@ tasks.register('downloadBrave') {
 tasks.register('extractSignature', Exec) {
     workingDir "${rootDir}"
     // sudo apt install apksigcopier
-    commandLine 'sh', '-c', 'mkdir -p metadata/eu.faircode.email/signatures/' + getVersionCode() + ' &&' +
-            'apksigcopier extract --v1-only=auto app/build/outputs/apk/fdroid/release/FairEmail-v1.' + getVersionCode() + getRevision() + '-fdroid-release.apk metadata/eu.faircode.email/signatures/' + getVersionCode()
+    commandLine 'sh', '-c', 'mkdir -p metadata/com.34j.fairemail/signatures/' + getVersionCode() + ' &&' +
+            'apksigcopier extract --v1-only=auto app/build/outputs/apk/fdroid/release/FairEmail-v1.' + getVersionCode() + getRevision() + '-fdroid-release.apk metadata/com.34j.fairemail/signatures/' + getVersionCode()
 }
 
 tasks.register('upload') {
